[project]
name = "llama-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "llama-index>=0.14.10",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "chromadb>=0.5.0",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "Q"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
